
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int * waitctx; } ;
typedef TYPE_1__ SSL ;
typedef int ASYNC_WAIT_CTX ;


 int ASYNC_WAIT_CTX_get_status (int *) ;

int SSL_get_async_status(SSL *s, int *status)
{
    ASYNC_WAIT_CTX *ctx = s->waitctx;

    if (ctx == ((void*)0))
        return 0;
    *status = ASYNC_WAIT_CTX_get_status(ctx);
    return 1;
}
